# airbnb-clone-backend

./: .env  db.sqlite3  manage.py  pyproject.toml  text
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_kind.py
common/: models.py  permissions.py
config/: authentication.py  settings.py
directmessages/: apps.py  models.py
directmessages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_a_experience_end_alter_experience_start.py  0003_experience_category_alter_perk_detail_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0003_house_category.py
medias/: models.py  serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py  types.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  queries.py  schema.py  serializers.py  tests.py  types.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_room_name_alter_amenity_description.py  0004_alter_amenity_options.py  0005_alter_room_kind.py  (+4 more)
users/: admin.py  models.py  serializers.py  types.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  views.py
(+6 files in other folders)
